--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
       language: shell
       before_install:
         - choco install python2
+        - choco install vcpython27
         - python -m pip install --upgrade pip
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
     - name: "Python 3.7 on Windows"
