--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ matrix:
       os: windows
       language: shell
       before_install:
-        - choco install python2
-        - choco install vcpython27
+        - choco install python2 vcredist2008
+        - choco install --ignore-dependencies vcpython27
         - python -m pip install --upgrade pip
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
     - name: "Python 3.7 on Windows"
