--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,36 @@ matrix:
     - name: "Python 2.7 on Linux"
       python: 2.7
       dist: trusty
+      before_install:
+        - python -m pip install --upgrade pip
     - name: "Python 3.7 on Linux"
       python: 3.7
       dist: xenial
+      before_install:
+        - python -m pip install --upgrade pip
     - name: "Python 2.7 on macOS"
       os: osx
       osx_image: xcode9.4
       language: shell
+      before_install:
+        - python -m pip install --upgrade pip
     - name: "Python 3.7 on macOS"
       os: osx
       osx_image: xcode10.2
       language: shell
+      before_cache:
+        - rm -f "$HOME/Library/Caches/pip/log/debug.log"
+      cache:
+        directories:
+          - "$HOME/Library/Caches/pip"
+      addons:
+        homebrew:
+          # update: true
+          packages: python3
+      before_install:
+        - python3 -m pip install --upgrade virtualenv
+        - virtualenv -p python3 --system-site-packages "$HOME/venv"
+        - source "$HOME/venv/bin/activate
     - name: "Python 2.7 on Windows"
       os: windows
       language: shell
