--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,27 @@ language: python
 
 matrix:
   include:
+    - name: "Python manylinux1 x86_64 via docker"
+      sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+           PLAT=manylinux1_x86_64
+      install:
+        - docker pull $DOCKER_IMAGE
+      script:
+        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build_manywheels.sh
+    - name: "Python manylinux1 i686 via docker"
+      sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+           PRE_CMD=linux32
+           PLAT=manylinux1_i686
+      install:
+        - docker pull $DOCKER_IMAGE
+      script:
+        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build_manywheels.sh
     - name: "Python 2.7 on Linux"
       python: 2.7
       dist: trusty
