--- a/.travis.yml
+++ b/.travis.yml
@@ -50,12 +50,34 @@ matrix:
         - choco install --ignore-dependencies vcpython27
         - python -m pip install --upgrade pip
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
+      install:
+        - source travis/build_windows_wheels.sh
+
+    - name: "Python 3.5 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python3 --version 3.5.4
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python35:/c/Python35/Scripts:$PATH
+      install:
+        - source travis/build_windows_wheels.sh
+
+    - name: "Python 3.6 on Windows"
+      os: windows
+      language: shell
+      before_install:
+        - choco install python3 --version 3.6.8
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
+      install:
+        - source travis/build_windows_wheels.sh
 
     - name: "Python 3.7 on Windows"
       os: windows
       language: shell
       before_install:
-        - choco install python
+        - choco install python3 --version 3.7.4
         - python -m pip install --upgrade pip
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
       install:
